@@ -1,5 +1,7 @@
 package xf.xfvrp.opt;
 
+import xf.xfvrp.base.exception.XFVRPException;
+import xf.xfvrp.base.exception.XFVRPExceptionType;
 import xf.xfvrp.opt.construct.XFVRPConst;
 import xf.xfvrp.opt.construct.XFVRPSavings;
 import xf.xfvrp.opt.construct.insert.XFPDPFirstBestInsert;
@@ -34,6 +36,7 @@ public enum XFVRPOptType {
 	SWAPSEGMENT_WITH_INVERT(XFVRPSwapSegmentWithInvert.class),
 	SWAPSEGMENT_EQ(XFVRPSwapSegmentEqual.class),
 	RELOCATE(XFVRPRelocate.class),
+	RELOCATE2(xf.xfvrp.opt.improve.routebased.XFVRPRelocate.class),
 	OR_OPT(XFVRPOrOpt.class),
 	PATH_RELOCATE(XFVRPPathMove.class),
 	OPT3(XFVRP3Opt.class),
@@ -60,11 +63,11 @@ public enum XFVRPOptType {
 	 * 
 	 * @return An object instance
 	 */
-	public XFVRPOptBase createInstance() {
+	public XFVRPOptBase createInstance() throws XFVRPException {
 		try {
-			return (XFVRPOptBase) Class.forName(clazz.getName()).newInstance();
+			return (XFVRPOptBase) Class.forName(clazz.getName()).getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
-			throw new IllegalStateException("no copy of optimization procedure possible", e);
+			throw new XFVRPException(XFVRPExceptionType.ILLEGAL_STATE, "no copy of optimization procedure possible", e);
 		}
 	}
 }
